# ml2025f_project_2

./: .gitignore  README.md  download_dataset.py  infer.py  infer.sh  pyproject.toml  train.py  train.sh  train_conf.yaml  upload_dataset.py
